Set codec to utf8 when reading our own lists

Apparently QTextStream doesn't detect it on non-utf8 locales

BUG: 295068

svn path=/trunk/extragear/multimedia/kmplayer/; revision=1282917